--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "axios": "^1.2.3",
     "daisyui": "^2.46.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
